# skunkagent

./: .gitignore  .loop.sh  .plan.md  .spec.md  .stat.txt  AGENTS.md  Dockerfile  MODE_SWITCHING.md  README.md  agent.py  api.py  cli.py  docker-entrypoint.sh  env.example  pyproject.toml  run-agent.sh  run-opencode-agent.sh  shuru.json  specloop.sh  state.py  status.txt
docker/: .dockerignore  Dockerfile  docker-entrypoint.sh
prompts/: system_prompt.md
shuru/: run-agent.sh  shuru-template.sh  shuru.json
